# VidNova

./: .gitignore  README.md  makefile
MockServer/MockServer/: CMakeLists.txt  data.h  image.qrc  main.cpp  mockServer.cpp  mockServer.h  mockServer.ui  video.qrc
MockServer/MockServer/common/: loadFileToByteArray.h  mylog.h  rand.cpp  rand.h
MockServer/MockServer/src/: httpServer.cpp  httpServer.h
MockServer/MockServer/video/: output.m3u8  output0.ts  output3.ts
VisNova/: CMakeLists.txt  imageRsc.qrc  main.cpp  vidnovamain.cpp  vidnovamain.h  vidnovamain.ui
VisNova/common/: ReadLocalFile.h  constants.h  intToString.h  myLog.h  rand.cpp  rand.h  stringToTime.h
VisNova/component/: adminPage.cpp  adminPage.h  adminPage.ui  attentionBtn.cpp  attentionBtn.h  bulletEdit.cpp  bulletEdit.h  bulletEdit.ui  bulletItem.cpp  bulletItem.h  bulletManage.cpp  bulletManage.h  checkPageForAp.cpp  checkPageForAp.h  checkPageForAp.ui  checkPageItem.cpp  checkPageItem.h  checkPageItem.ui  confirmDialog.cpp  confirmDialog.h  editUserForAp.cpp  editUserForAp.h  editUserForAp.ui  homePageCpt.cpp  homePageCpt.h  homePageCpt.ui  modifyPd.cpp  modifyPd.h  modifyPd.ui  modifySelfInfo.cpp  modifySelfInfo.h  modifySelfInfo.ui  mpvPlayer.cpp  mpvPlayer.h  myPage.cpp  myPage.h  myPage.ui  myPageAvatarBtn.cpp  myPageAvatarBtn.h  pageBtn.cpp  (+39 more)
VisNova/dataCenter/: adminInfo.cpp  adminInfo.h  bulletInfo.cpp  bulletInfo.h  data.cpp  data.h  dataCenter.cpp  dataCenter.h  getVideoPageType.h  kindAndTags.cpp  kindAndTags.h  userInfo.cpp  userInfo.h  videoInfo.cpp  videoInfo.h  videoInfoForLoad.cpp  videoInfoForLoad.h  videoInfoForUpload.cpp  videoInfoForUpload.h  videoList.cpp  videoList.h
VisNova/lrPage/: login.cpp  login.h  login.ui
VisNova/net/: data.h  netClient.cpp  netClient.h  testHttp.h
VisNova/startPage/: startPage.cpp  startPage.h
VisNova/style/: btnStyle.h  style.h
VisNova/test/: output4.ts
dev-environment/: docker-compose.yml
dev-environment/elasticsearch/: elasticsearch.yml
dev-environment/elasticsearch/plugins/analysis-ik/: plugin-descriptor.properties
dev-environment/kibana/: kibana.yml
dev-environment/mysql/: my.cnf
dev-environment/rabbitmq/: Dockerfile
dev-environment/redis/: redis.conf
server/data/: data.cc  data.h  file.cc  file.h  session.cc  session.h
server/proto/: base.proto  file.proto  http.proto  message.proto  user.proto  video.proto
server/publisher/: publisher.cc  publisher.h
